# CSCE-master

./: .env.example  .gitignore  .gitmodules  README.md  RESTRUCTURE_PLAN.md  REVIEW_BEFORE_PUSH.md
.github/workflows/: notify-master.yml  update-submodules.yml
1040/: Homework 3.drawio
1040/assignments/HW1/: .nfs00000000029a001900000022  a.out  grades  hwk1.cpp  hwk1alt.temp  student.h
1040/assignments/HW2/: Homework 2.drawio  Homework 2_2.drawio
1040/assignments/HW3/: Homework 3.drawio
1040/assignments/HW4/: Homework 4.drawio  Homework 4_2.drawio
1040/assignments/HW4/kghw4/kghw4/: AudioCD.cpp  AudioCD.h  Books.cpp  Books.h  DVD.cpp  DVD.h  LibraryItems.cpp  LibraryItems.h  (+8 more)
2100/: CSCE_2100_Python_Sets.ipynb  Python_Sets.ipynb
2100/CSCE 2100/: Graph Searches.md  Graphs.md  Relations.md  Review For Exam 1.md  Sets.md
2110/: MIGRATION_GUIDE.md  README.md  submodules.txt
2110/Assignment 1.1/: .gitignore  Book.cpp  Book.h  COMPARISON.md  Library.cpp  Library.h  Makefile  README.md  library_system.cpp  main.cpp  requirements.md  test_library.sh
2110/Assignment 1.1/final/: kg0909.cpp
2110/Assignment 1.1/tests/: CMakeLists.txt  README.md  library_test.cpp
2110/Assignment 2/: kg0909  kg0909.cpp  kg0909.out  patients-1.txt  requirements.md  template.cpp
2110/Assignment 3/: requirements.md
2110/Assignment 3/final/: app  graph.txt  kg0909.cpp
2110/Exam 2/: hashTable  hashTable.cpp  hashTable.h  main.cpp
2110/Exam 2/Archive/: hashTable.h
2110/scripts/: README.md  init-googletest.sh  sync-submodules.sh
scripts/: init-googletest.sh  review-status.sh
